# raptorxx

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Dockerfile  README.md  vcpkg.json
benchmark/benchmark_gtfsRaptor/: CMakeLists.txt  SimpleRaptorBenchmark.cpp  gtfsRaptor_benchmark.cpp
benchmark/benchmark_schedule/: CMakeLists.txt  gtfs_benchmark.cpp  gtfs_schedule_benchmark.cpp
common/logging/: CMakeLists.txt  LoggingPool.cpp  LoggingPool.h
geometry/: CMakeLists.txt
geometry/include/spatial/: Coordinate.h  CoordinateComponent.h
geometry/include/utils/: usings.h  utils.h
geometry/src/: Coordinate.h  CoordinateComponent.h  K2DTree.cpp  K2DTree.h
geometry/src/spatial/: CoordinateComponent.h
geometry/src/utils/: usings.h  utils.h
geometry/test/: CMakeLists.txt  test_kdTree.cpp
gtfs/: CMakeLists.txt
gtfs/benchmarks/: CMakeLists.txt  lambda_vs_function.cpp  main.cxx
gtfs/src/: DataReader.h  GtfsAgencyReader.cpp  GtfsAgencyReader.h  GtfsAgencyReaderStrategy.cpp  GtfsAgencyReaderStrategy.h  GtfsData.cpp  GtfsData.h  GtfsReader.cpp  GtfsReader.h  GtfsReaderStrategy.cpp  GtfsReaderStrategy.h  TestObject.cpp  TestObject.h  main.cpp  mod.ixx  mod.test.cppm  test.cxxmodule.ixx
gtfs/src/fields/: Agency.cpp  Agency.h
gtfs/src/model/: Calendar.h  CalendarDate.h  Route.h  Stop.h  Transfer.h  stopTime.h
gtfs/src/strategies/: GtfsAgencyReader.cpp  GtfsAgencyReader.h  GtfsCalendarDateReader.cpp  GtfsCalendarDateReader.h  GtfsCalendarReader.cpp  GtfsCalendarReader.h  GtfsReaderStrategy.cpp  GtfsReaderStrategy.h  GtfsRouteReader.cpp  GtfsRouteReader.h  GtfsStopReader.cpp  GtfsStopReader.h  GtfsStopTimeReader.cpp  GtfsStopTimeReader.h  GtfsTransferReader.cpp  GtfsTransferReader.h  GtfsTripReader.cpp  GtfsTripReader.h
gtfs/src/test-data/: agency.txt
gtfs/src/utils/: scopedTimer.h  utils.h
gtfs/test/: CMakeLists.txt  test_addition.cpp  test_exploreGTest.cpp  test_gtfs.cpp  test_gtfsReader.cpp  test_main.cpp  test_testGoogleFramework.cpp
gtfs/test/test-data/: stop_times.txt  stops.txt
gtfsRaptorConfig/: CMakeLists.txt
gtfsRaptorConfig/include/: RoutePartitioner.h  TimetableManager.h
gtfsRaptorConfig/src/: GtfsToRaptorConverter.cpp  RoutePartitioner.cpp  TimetableManager.cpp
interfaces/: CMakeLists.txt
logging/: CMakeLists.txt  LoggingPool.cpp  LoggingPool.h
logging/include/: LoggerBridge.h  LoggerFactory.h
logging/src/: LoggerBridge.h  LoggerBridgeImpl.cpp  LoggerBridgeImpl.h  LoggerFactory.cpp  LoggingPool.cpp  LoggingPool.h
raptor/: CMakeLists.txt
raptor/include/: Connection.h  IConnection.h  IRaptor.h  IRaptorAlgorithmFactory.h  IRaptorAlgorithmStrategy.h  LocalDateTime.h  QueryConfig.h  RaptorAlgorithm.h  RouteBuilder.h  raptorTypes.h  usingTypes.h
raptor/include/config/: QueryConfig.h  WalkingConfig.h
raptor/src/: ActiveTrip.h  ConnectionImpl.cpp  ConnectionImpl.h  FootpathRelaxer.cpp  FootpathRelaxer.h  LabelPostprocessor.cpp  LabelPostprocessor.h  Leg.h  LegImpl.cpp  LegImpl.h  Query.cpp  Query.h  QueryConfig.cpp  Raptor.cpp  Raptor.h  RaptorAlgorithmFactory.cpp  RaptorAlgorithmFactory.h  RaptorConnection.cpp  RaptorConnection.h  RaptorRouter.cpp  RaptorRouter.h  RaptorStrategy.cpp  RaptorStrategy.h  RouteScanner.cpp  RouteScanner.h  StopLabelsAndTimes.cpp  StopLabelsAndTimes.h  main.cpp
raptor/src/strategies/: RaptorStrategy.cpp  RaptorStrategy.h  StandardRaptorStrategy.cpp  StandardRaptorStrategy.h
raptor/src/utils/: IndexedVisitedHashMap.cpp  IndexedVisitedHashMap.h  IndexedVisitedSet.cpp  IndexedVisitedSet.h  Label.h  LocalDateTime.cpp  OrderedHashMap.h  RaptorData.cpp  RaptorData.h  RaptorDataBuilder.cpp  RaptorDataBuilder.h  RouteBuilder.cpp  RouteBuilder.h  RouteContainer.cpp  RouteContainer.h  StopLabelsAndTimes.cpp  StopLabelsAndTimes.h
raptor/test/: CMakeLists.txt  RaptorRouterTestBuilder.cpp  RaptorRouterTestBuilder.h  test_raptor.cpp  test_raptorAlgorithm.cpp  test_raptorDataBuilder.cpp  test_routeBuilder.cpp
raptor/test/sample-feed/: agency.txt  calendar.txt  calendar_dates.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
raptor/test/test-data-fictional/: routes.txt  stop_times.txt  stops.txt  transfers.txt  trips.txt
schedule/: CMakeLists.txt
schedule/benchmarks/: CMakeLists.txt  gtfs_benchmark.cpp  gtfs_schedule_benchmark.cpp  lambda_vs_function.cpp
schedule/include/: GtfsData.h  GtfsReader.h  GtfsReaderStrategyFactory.h  IGtfsReaderStrategyFactory.h  RoutePartitioner.h  TimetableManager.h
schedule/include/model/: Agency.h  Calendar.h  CalendarDate.h  Route.h  Stop.h  StopTime.h  Transfer.h  Trip.h  helperFunctions.h
schedule/src/: DataContainer.h  DataReader.h  GtfsData.h  GtfsReader.cpp  GtfsReader.h  TestObject.cpp  TestObject.h  Types.h
schedule/src/gtfs/: GtfsCsvParserReaderStrategyFactory.cpp  GtfsCsvParserReaderStrategyFactory.h  GtfsCsvReaderStrategyFactory.cpp  GtfsCsvReaderStrategyFactory.h  GtfsData.h  GtfsReader.cpp  GtfsReader.h  GtfsReaderStrategyFactory.cpp  GtfsReaderStrategyFactory.h  GtfsSchedule.cpp  GtfsSchedule.h  GtfsTxtReaderStrategyFactory.cpp  GtfsTxtReaderStrategyFactory.h  RelationManager.cpp  RelationManager.h  RoutePartitioner.cpp  TimetableManager.cpp
schedule/src/model/: Agency.h  Calendar.h  CalendarDate.h  Route.h  Stop.h  StopTime.h  Transfer.h  Trip.h
schedule/src/strategies/: GtfsAgencyReader.cpp  GtfsAgencyReader.h  GtfsCalendarDateReader.cpp  GtfsCalendarDateReader.h  GtfsCalendarReader.cpp  GtfsCalendarReader.h  GtfsRouteReader.cpp  GtfsRouteReader.h  GtfsStopReader.cpp  GtfsStopReader.h  GtfsStopTimeReader.cpp  GtfsStopTimeReader.h  GtfsTransferReader.cpp  GtfsTransferReader.h  GtfsTripReader.cpp  (+1 more)
schedule/test/: CMakeLists.txt  test_gtfs.cpp  test_gtfsReader.cpp  test_gtfsReaderCsv.cpp  test_gtfsReaderTxt.cpp  test_main.cpp
src/gtfsRaptorConfig/: CMakeLists.txt
src/schedule/: CMakeLists.txt
test/: CMakeLists.txt  test_addition.cpp
test/test_geometry/: CMakeLists.txt
test/test_gtfsRaptorConfig/: CMakeLists.txt
test/test_raptor/: CMakeLists.txt
test/test_schedule/: CMakeLists.txt  test_main.cpp
(+248 files in other folders)
